--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -6,6 +6,7 @@ h1 a {
 body {
     padding-left: 15px;
     background-color: rgb(241, 213, 213);
+    background-image: url("https://thumbs.gfycat.com/UnkemptBriskAgouti-small.gif?fbclid=IwAR3K8mbBekNxQPAvfdJqZtcywiVondbhDLYDcZlcCRqQLq0fc3U9I8o9lY4")
 }
 
 .page-header {
