Semi colon in stylesheet

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -10,7 +10,7 @@ body {
 
 .page-header {
     background-color: #36917d;
-    background-image: url("https://thumbs.gfycat.com/UnkemptBriskAgouti-small.gif?fbclid=IwAR3K8mbBekNxQPAvfdJqZtcywiVondbhDLYDcZlcCRqQLq0fc3U9I8o9lY4")
+    background-image: url("https://thumbs.gfycat.com/UnkemptBriskAgouti-small.gif?fbclid=IwAR3K8mbBekNxQPAvfdJqZtcywiVondbhDLYDcZlcCRqQLq0fc3U9I8o9lY4");
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
