--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -9,7 +9,7 @@ body {
 }
 
 .page-header {
-    background-color: black;
+    background-image: url("https://thumbs.gfycat.com/UnkemptBriskAgouti-small.gif");
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
