--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -15,9 +15,10 @@ body {
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #801919;
+    color: #e9dcdc;
     font-size: 36pt;
     text-decoration: none;
+    text-shadow: 1px 1px 5px black, 0 0 25px lightcoral, 0 0 5px green;
 }
 
 .content {
@@ -28,8 +29,13 @@ h1, h2, h3, h4 {
     font-family: 'Lobster', cursive;
 }
 
+.page-header h1 {
+    margin-top: 200;
+}
+
 .date {
-    color: #a82c2c;
+    color: #286d5c;
+    text-shadow: 1px 1px 5px black;
 }
 
 .save {
@@ -49,8 +55,15 @@ h1, h2, h3, h4 {
 
 .post {
     margin-bottom: 70px;
+    padding-left: 10px;
+    border-style: groove;
+    border-width: 1px;
+    border-color: #e4cbd8;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .post h1 a, .post h1 a:visited {
-    color: #488d6d;
+    color: #286d5c;
+    text-shadow: 1px 1px 2px black;
 }
